feat: centralize environment variables with automated symlink setup
- Add comprehensive .env.example with categorized variables
- Create automated setup script for environment symlinks
- Add postinstall hook for seamless new clone setup
- Support cross-platform symlink creation

--- a/.env.example
+++ b/.env.example
@@ -1,68 +1,69 @@
-# Public Web — Environment Variables
+# =============================================================================
+# HOSPEDA - Environment Variables Configuration
+# =============================================================================
+# 🔴 REQUIRED = Must be set for the application to work
+# 🟡 OPTIONAL = Has defaults, can be customized
+# =============================================================================
 
-PUBLIC_API_BASE_URL=
-PUBLIC_DEFAULT_LOCALE=es
-PUBLIC_SUPPORTED_LOCALES=es,en,pt
-PUBLIC_SITE_URL=http://localhost:4321
+# =============================================================================
+# 🌍 GENERAL CONFIGURATION
+# =============================================================================
+NODE_ENV=development                                    # 🟡 OPTIONAL (default: development)
+PUBLIC_SITE_URL=http://localhost:4321                  # 🔴 REQUIRED for Astro
 
-# Clerk
-PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
+# =============================================================================
+# 🗄️ DATABASE CONFIGURATION
+# =============================================================================
+DATABASE_URL=postgresql://user:password@localhost:5432/hospeda  # 🔴 REQUIRED
 
-# Sentry
-PUBLIC_SENTRY_DSN=
-SENTRY_ENVIRONMENT=development
-SENTRY_RELEASE=
+# Database Pool Configuration
+DB_POOL_MAX_CONNECTIONS=10                             # 🟡 OPTIONAL (default: 10)
+DB_POOL_IDLE_TIMEOUT_MS=30000                          # 🟡 OPTIONAL (default: 30000)
+DB_POOL_CONNECTION_TIMEOUT_MS=2000                     # 🟡 OPTIONAL (default: 2000)
 
-# Apps variables for the frontend and backend
-VITE_API_PORT = 8080
-VITE_API_HOST = 'http://localhost'
+# =============================================================================
+# 🚀 API CONFIGURATION
+# =============================================================================
+API_PORT=3001                                          # 🟡 OPTIONAL (default: 3001)
+API_HOST=localhost                                     # 🟡 OPTIONAL (default: localhost)
+PUBLIC_API_BASE_URL=http://localhost:3001              # 🔴 REQUIRED for frontend apps
 
-# Apps variables only for backend
-# CORS_ORIGINS = 'http://localhost:3000,http://localhost:4321,http://localhost:5173,http://localhost:4173'
-DATABASE_URL = 'postgresql://user:password@localhost:5432/dbname'
+# =============================================================================
+# 🔐 AUTHENTICATION (Clerk)
+# =============================================================================
+PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_key_here     # 🔴 REQUIRED for auth
+CLERK_SECRET_KEY=sk_test_your_secret_here              # 🔴 REQUIRED for auth
+CLERK_WEBHOOK_SECRET=whsec_your_webhook_secret         # 🟡 OPTIONAL (only if using webhooks)
 
-# Logger for the frontend and backend
-VITE_LOG_LEVEL = 'LOG'
-VITE_LOG_INCLUDE_TIMESTAMPS = true
-VITE_LOG_INCLUDE_LEVEL = true
-VITE_LOG_USE_COLORS = true
+# =============================================================================
+# 📝 LOGGING CONFIGURATION
+# =============================================================================
+LOG_LEVEL=info                                         # 🟡 OPTIONAL (default: info)
+ENABLE_REQUEST_LOGGING=true                            # 🟡 OPTIONAL (default: true)
 
-# Metrics Configuration
-METRICS_ENABLED=true
-METRICS_SLOW_REQUEST_THRESHOLD_MS=1000
-METRICS_SLOW_AUTH_THRESHOLD_MS=2000
+# Log Formatting
+LOG_INCLUDE_TIMESTAMPS=true                            # 🟡 OPTIONAL (default: true)
+LOG_INCLUDE_LEVEL=true                                 # 🟡 OPTIONAL (default: true)
+LOG_USE_COLORS=true                                    # 🟡 OPTIONAL (default: true)
+LOG_SAVE=false                                         # 🟡 OPTIONAL (default: false)
+LOG_EXPAND_OBJECTS=false                               # 🟡 OPTIONAL (default: false)
+LOG_TRUNCATE_TEXT=true                                 # 🟡 OPTIONAL (default: true)
+LOG_TRUNCATE_AT=1000                                   # 🟡 OPTIONAL (default: 1000)
+LOG_STRINGIFY=false                                    # 🟡 OPTIONAL (default: false)
 
-# Rate Limiting Configuration - General
-RATE_LIMIT_ENABLED=true
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-RATE_LIMIT_KEY_GENERATOR=ip
-RATE_LIMIT_SKIP_SUCCESSFUL_REQUESTS=false
-RATE_LIMIT_SKIP_FAILED_REQUESTS=false
-RATE_LIMIT_STANDARD_HEADERS=true
-RATE_LIMIT_LEGACY_HEADERS=false
-RATE_LIMIT_MESSAGE=Too many requests, please try again later.
+# =============================================================================
+# 🌐 CORS CONFIGURATION
+# =============================================================================
+CORS_ORIGINS=http://localhost:3000,http://localhost:4321,http://localhost:5173  # 🟡 OPTIONAL (has defaults)
+CORS_ALLOW_CREDENTIALS=true                            # 🟡 OPTIONAL (default: true)
+CORS_MAX_AGE=86400                                     # 🟡 OPTIONAL (default: 86400)
+CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS   # 🟡 OPTIONAL (has defaults)
+CORS_ALLOW_HEADERS=Content-Type,Authorization,X-Requested-With  # 🟡 OPTIONAL (has defaults)
+CORS_EXPOSE_HEADERS=Content-Length,X-Request-ID       # 🟡 OPTIONAL (has defaults)
 
-# Rate Limiting Configuration - Auth Endpoints
-RATE_LIMIT_AUTH_ENABLED=true
-RATE_LIMIT_AUTH_WINDOW_MS=300000
-RATE_LIMIT_AUTH_MAX_REQUESTS=50
-RATE_LIMIT_AUTH_MESSAGE=Too many authentication requests, please try again later.
-
-# Rate Limiting Configuration - Public API
-RATE_LIMIT_PUBLIC_ENABLED=true
-RATE_LIMIT_PUBLIC_WINDOW_MS=3600000
-RATE_LIMIT_PUBLIC_MAX_REQUESTS=1000
-RATE_LIMIT_PUBLIC_MESSAGE=Too many API requests, please try again later.
-
-# Rate Limiting Configuration - Admin Endpoints
-RATE_LIMIT_ADMIN_ENABLED=true
-RATE_LIMIT_ADMIN_WINDOW_MS=600000
-RATE_LIMIT_ADMIN_MAX_REQUESTS=200
-RATE_LIMIT_ADMIN_MESSAGE=Too many admin requests, please try again later.
-
-# Cache Configuration (auto-detects runtime support)
+# =============================================================================
+# 💾 CACHE CONFIGURATION
+# =============================================================================
 CACHE_ENABLED=true
 CACHE_DEFAULT_MAX_AGE=300
 CACHE_DEFAULT_STALE_WHILE_REVALIDATE=60
@@ -73,9 +74,131 @@ CACHE_NO_CACHE_ENDPOINTS=/health/db,/docs
 CACHE_ETAG_ENABLED=true
 CACHE_LAST_MODIFIED_ENABLED=true
 
-# TODO-Linear Integration
-LINEAR_API_KEY=lin_api_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-LINEAR_TEAM_ID=your-linear-team-id
-TODO_LINEAR_DEFAULT_USER_EMAIL=default@hospeda.com
-TODO_LINEAR_DEFAULT_USER_ID=default-user-linear-id
-TODO_LINEAR_DEFAULT_USER_NAME=Default Developer
+# =============================================================================
+# 🚦 RATE LIMITING CONFIGURATION
+# =============================================================================
+# General Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_KEY_GENERATOR=ip
+RATE_LIMIT_SKIP_SUCCESSFUL_REQUESTS=false
+RATE_LIMIT_SKIP_FAILED_REQUESTS=false
+RATE_LIMIT_STANDARD_HEADERS=true
+RATE_LIMIT_LEGACY_HEADERS=false
+RATE_LIMIT_MESSAGE=Too many requests, please try again later.
+
+# Auth Endpoints Rate Limiting
+RATE_LIMIT_AUTH_ENABLED=true
+RATE_LIMIT_AUTH_WINDOW_MS=300000
+RATE_LIMIT_AUTH_MAX_REQUESTS=50
+RATE_LIMIT_AUTH_MESSAGE=Too many authentication requests, please try again later.
+
+# Public API Rate Limiting
+RATE_LIMIT_PUBLIC_ENABLED=true
+RATE_LIMIT_PUBLIC_WINDOW_MS=3600000
+RATE_LIMIT_PUBLIC_MAX_REQUESTS=1000
+RATE_LIMIT_PUBLIC_MESSAGE=Too many API requests, please try again later.
+
+# Admin Endpoints Rate Limiting
+RATE_LIMIT_ADMIN_ENABLED=true
+RATE_LIMIT_ADMIN_WINDOW_MS=600000
+RATE_LIMIT_ADMIN_MAX_REQUESTS=200
+RATE_LIMIT_ADMIN_MESSAGE=Too many admin requests, please try again later.
+
+# =============================================================================
+# 🗜️ COMPRESSION CONFIGURATION
+# =============================================================================
+COMPRESSION_ENABLED=true
+COMPRESSION_LEVEL=6
+COMPRESSION_THRESHOLD=1024
+COMPRESSION_CHUNK_SIZE=16384
+COMPRESSION_FILTER=text/*,application/json,application/xml,application/javascript
+COMPRESSION_EXCLUDE_ENDPOINTS=/health/db,/docs
+COMPRESSION_ALGORITHMS=gzip,deflate
+
+# =============================================================================
+# 🔒 SECURITY CONFIGURATION
+# =============================================================================
+SECURITY_ENABLED=true
+SECURITY_HEADERS_ENABLED=true
+
+# Security Headers
+SECURITY_CONTENT_SECURITY_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';
+SECURITY_STRICT_TRANSPORT_SECURITY=max-age=31536000; includeSubDomains
+SECURITY_X_FRAME_OPTIONS=SAMEORIGIN
+SECURITY_X_CONTENT_TYPE_OPTIONS=nosniff
+SECURITY_X_XSS_PROTECTION=1; mode=block
+SECURITY_REFERRER_POLICY=strict-origin-when-cross-origin
+SECURITY_PERMISSIONS_POLICY=camera=(), microphone=(), geolocation=()
+
+# =============================================================================
+# ✅ VALIDATION CONFIGURATION
+# =============================================================================
+VALIDATION_MAX_BODY_SIZE=10485760
+VALIDATION_MAX_REQUEST_TIME=30000
+VALIDATION_ALLOWED_CONTENT_TYPES=application/json,multipart/form-data
+VALIDATION_REQUIRED_HEADERS=user-agent
+VALIDATION_CLERK_AUTH_ENABLED=true
+VALIDATION_CLERK_AUTH_HEADERS=authorization
+VALIDATION_SANITIZE_ENABLED=true
+VALIDATION_SANITIZE_MAX_STRING_LENGTH=1000
+VALIDATION_SANITIZE_REMOVE_HTML_TAGS=true
+VALIDATION_SANITIZE_ALLOWED_CHARS=[\w\s\-.,!?@#$%&*()+=]
+
+# =============================================================================
+# 📤 RESPONSE FORMATTING
+# =============================================================================
+RESPONSE_FORMAT_ENABLED=true
+RESPONSE_INCLUDE_TIMESTAMP=true
+RESPONSE_INCLUDE_VERSION=true
+RESPONSE_API_VERSION=1.0.0
+RESPONSE_INCLUDE_REQUEST_ID=true
+RESPONSE_INCLUDE_METADATA=true
+RESPONSE_SUCCESS_MESSAGE=Success
+RESPONSE_ERROR_MESSAGE=An error occurred
+
+# =============================================================================
+# 🌍 INTERNATIONALIZATION
+# =============================================================================
+PUBLIC_DEFAULT_LOCALE=es                              # 🟡 OPTIONAL (default: es)
+PUBLIC_SUPPORTED_LOCALES=es,en,pt                     # 🟡 OPTIONAL (default: es,en,pt)
+
+# =============================================================================
+# 📊 MONITORING & METRICS
+# =============================================================================
+# Sentry Configuration
+PUBLIC_SENTRY_DSN=https://your-dsn@sentry.io/project-id  # 🟡 OPTIONAL (for error tracking)
+SENTRY_ENVIRONMENT=development                         # 🟡 OPTIONAL (default: development)
+SENTRY_RELEASE=1.0.0                                  # 🟡 OPTIONAL (for release tracking)
+
+# Metrics Configuration
+METRICS_ENABLED=true                                   # 🟡 OPTIONAL (default: true)
+METRICS_SLOW_REQUEST_THRESHOLD_MS=1000                 # 🟡 OPTIONAL (default: 1000)
+METRICS_SLOW_AUTH_THRESHOLD_MS=2000                    # 🟡 OPTIONAL (default: 2000)
+
+# =============================================================================
+# 🔧 TODO-LINEAR INTEGRATION
+# =============================================================================
+LINEAR_API_KEY=lin_api_your_key_here                   # 🟡 OPTIONAL (only if using TODO sync)
+LINEAR_TEAM_ID=your-linear-team-id                     # 🟡 OPTIONAL (only if using TODO sync)
+TODO_LINEAR_DEFAULT_USER_EMAIL=developer@hospeda.com  # 🟡 OPTIONAL (only if using TODO sync)
+TODO_LINEAR_DEFAULT_USER_ID=your-linear-user-id       # 🟡 OPTIONAL (only if using TODO sync)
+TODO_LINEAR_DEFAULT_USER_NAME=Developer Name          # 🟡 OPTIONAL (only if using TODO sync)
+
+# =============================================================================
+# 🌱 SEEDING CONFIGURATION
+# =============================================================================
+SEED_AUTH_PROVIDER=CLERK                               # 🟡 OPTIONAL (only for seeding)
+SEED_SUPER_ADMIN_AUTH_PROVIDER_USER_ID=your-super-admin-id  # 🟡 OPTIONAL (only for seeding)
+
+# =============================================================================
+# 🛠️ DEVELOPMENT & DEBUGGING
+# =============================================================================
+DEBUG_ACTOR_ID=                                       # 🟡 OPTIONAL (only for admin debugging)
+COMMIT_SHA=                                           # 🟡 OPTIONAL (auto-set in CI/CD)
+
+# =============================================================================
+# 🧪 TESTING CONFIGURATION
+# =============================================================================
+TESTING_RATE_LIMIT=false                              # 🟡 OPTIONAL (only for testing)
