--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "hospeda",
+    "type": "module",
     "private": true,
     "version": "0.0.1",
     "description": "Modern, minimalist web platform for discovering and managing tourist accommodations in Concepción del Uruguay and the Litoral region of Argentina, built with Astro, React, TanStack, Drizzle, and PostgreSQL in a TurboRepo-optimized monorepo.",
@@ -26,6 +27,8 @@
         "check": "biome check --write .",
         "typecheck": "turbo run typecheck",
         "prepare": "husky install",
+        "setup:env": "node scripts/setup-env.js",
+        "postinstall": "node scripts/setup-env.js",
         "build:api": "pnpm --filter hospeda-api build",
         "prepare:api:prod": "pnpm exec tsx scripts/generate-api-prod-package.ts",
         "deploy:api": "pnpm build:api && pnpm prepare:api:prod && flyctl deploy --config apps/api/fly.toml --dockerfile Dockerfile.api",
