--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
         "astro-og": "^0.3.0",
         "astro-typed-links": "^1.1.4",
         "date-fns": "^4.1.0",
+        "dotenv": "^17.2.1",
         "nanostores": "^0.9.5",
         "pg": "^8.15.6",
         "react": "^18.3.1",
@@ -56,18 +57,18 @@
     "devDependencies": {
         "@repo/tailwind-config": "workspace:*",
         "@repo/typescript-config": "workspace:*",
+        "@tailwindcss/vite": "^4.1.12",
         "@testing-library/dom": "^10.4.0",
-        "@testing-library/react": "^16.2.0",
         "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
         "@types/pg": "^8.15.1",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@vitest/coverage-v8": "^3.2.4",
         "astro-font-picker": "^0.2.2",
         "jsdom": "^26.0.0",
-        "tailwindcss": "^4.1.12",
-        "@tailwindcss/vite": "^4.1.12",
         "lightningcss": "^1.28.1",
+        "tailwindcss": "^4.1.12",
         "vitest": "^3.1.3"
     }
 }
