--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,13 +1,8 @@
 {
-    "extends": "../typescript-config/package-base.json",
+    "extends": "@repo/typescript-config/base.json",
     "compilerOptions": {
-        "types": ["node"],
-        "outDir": "dist",
-        "rootDir": "src",
-        "declaration": true,
-        "declarationMap": true,
-        "strict": true
+        "outDir": "dist"
     },
-    "include": ["src", "src/vite-env.d.ts"],
+    "include": ["src/**/*"],
     "exclude": ["dist", "node_modules"]
 }
