refactor(admin): migrate to centralized environment system
- Update admin package.json with @repo/config dependency
- Configure Vite to use centralized environment variables
- Update auth context and API client to use new environment system

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -26,6 +26,7 @@
         "@github/relative-time-element": "^4.4.8",
         "@pablotheblink/flashyjs": "^1.0.5",
         "@repo/auth-ui": "workspace:*",
+        "@repo/config": "workspace:*",
         "@repo/i18n": "workspace:*",
         "@repo/icons": "workspace:*",
         "@repo/logger": "workspace:*",
