build: update admin panel dependencies
- Add required dependencies for entity detail system
- Update pnpm lockfile with new packages

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -25,6 +25,8 @@
         "@faker-js/faker": "9.6.0",
         "@github/relative-time-element": "^4.4.8",
         "@pablotheblink/flashyjs": "^1.0.5",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tanstack/react-form": "^0.39.2",
         "@repo/auth-ui": "workspace:*",
         "@repo/config": "workspace:*",
         "@repo/i18n": "workspace:*",
@@ -44,6 +46,7 @@
         "@vitejs/plugin-react": "4.7.0",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
+        "lucide-react": "^0.540.0",
         "react": "19.1.1",
         "react-dom": "19.1.1",
         "tailwind-merge": "3.0.2",
