build: add TanStack Router generated files to gitignore
- Add **/routeTree.gen.ts pattern to ignore generated route files
- Prevents committing auto-generated routing code

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,9 @@ mcp-todos.json
 packages/seed/mappings/id-mappings.json
 apps/api/package.prod.json
 
+# TanStack Router generated files
+**/routeTree.gen.ts
+
 # =========================
 # Drizzle ORM
 # - Mantener SÍ o SÍ: drizzle/migrations/*.sql en el repo
