--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -26,7 +26,6 @@
         "@github/relative-time-element": "^4.4.8",
         "@pablotheblink/flashyjs": "^1.0.5",
         "@radix-ui/react-slot": "^1.2.3",
-        "@tanstack/react-form": "^0.39.2",
         "@repo/auth-ui": "workspace:*",
         "@repo/config": "workspace:*",
         "@repo/i18n": "workspace:*",
@@ -36,12 +35,14 @@
         "@tailwindcss/vite": "4.1.12",
         "@tanstack/match-sorter-utils": "8.19.4",
         "@tanstack/react-devtools": "0.2.2",
+        "@tanstack/react-form": "^0.39.2",
         "@tanstack/react-query": "5.59.20",
         "@tanstack/react-router": "1.131.26",
         "@tanstack/react-router-devtools": "1.131.26",
         "@tanstack/react-router-ssr-query": "1.131.26",
         "@tanstack/react-start": "1.131.26",
         "@tanstack/react-table": "8.21.2",
+        "@tanstack/react-virtual": "^3.13.12",
         "@tanstack/router-plugin": "1.131.26",
         "@vitejs/plugin-react": "4.7.0",
         "class-variance-authority": "0.7.1",
