--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,7 +21,7 @@
         "typecheck": "tsc --noEmit --project ./tsconfig.json"
     },
     "dependencies": {
-        "@clerk/clerk-react": "5.42.0",
+        "@clerk/tanstack-react-start": "^0.23.1",
         "@faker-js/faker": "9.6.0",
         "@github/relative-time-element": "^4.4.8",
         "@pablotheblink/flashyjs": "^1.0.5",
