--- a/apps/admin/public/manifest.json
+++ b/apps/admin/public/manifest.json
@@ -1,25 +1,140 @@
 {
-    "short_name": "TanStack App",
-    "name": "Create TanStack App Sample",
+    "name": "Hospeda Admin Panel",
+    "short_name": "Hospeda Admin",
+    "description": "Administrative panel for Hospeda platform management",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#0ea5e9",
+    "orientation": "portrait-primary",
+    "scope": "/",
+    "lang": "en",
+    "categories": ["business", "productivity"],
     "icons": [
         {
-            "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
+            "src": "/icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "purpose": "maskable any"
         },
         {
-            "src": "logo192.png",
+            "src": "/icons/icon-96x96.png",
+            "sizes": "96x96",
             "type": "image/png",
-            "sizes": "192x192"
+            "purpose": "maskable any"
         },
         {
-            "src": "logo512.png",
+            "src": "/icons/icon-128x128.png",
+            "sizes": "128x128",
             "type": "image/png",
-            "sizes": "512x512"
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable any"
         }
     ],
-    "start_url": ".",
-    "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "shortcuts": [
+        {
+            "name": "Dashboard",
+            "short_name": "Dashboard",
+            "description": "Go to main dashboard",
+            "url": "/",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-dashboard.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "Destinations",
+            "short_name": "Destinations",
+            "description": "Manage destinations",
+            "url": "/destinations",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-destinations.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "Accommodations",
+            "short_name": "Accommodations",
+            "description": "Manage accommodations",
+            "url": "/accommodations",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-accommodations.png",
+                    "sizes": "96x96"
+                }
+            ]
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/screenshots/desktop-dashboard.png",
+            "sizes": "1280x720",
+            "type": "image/png",
+            "form_factor": "wide",
+            "label": "Dashboard view on desktop"
+        },
+        {
+            "src": "/screenshots/mobile-dashboard.png",
+            "sizes": "375x667",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Dashboard view on mobile"
+        }
+    ],
+    "prefer_related_applications": false,
+    "related_applications": [],
+    "edge_side_panel": {
+        "preferred_width": 400
+    },
+    "launch_handler": {
+        "client_mode": "navigate-existing"
+    },
+    "protocol_handlers": [
+        {
+            "protocol": "web+hospeda",
+            "url": "/handle?url=%s"
+        }
+    ],
+    "file_handlers": [
+        {
+            "action": "/import",
+            "accept": {
+                "text/csv": [".csv"],
+                "application/json": [".json"]
+            }
+        }
+    ]
 }
