feat(admin): implement configurable entity detail system (Etapa 3)
- Add comprehensive type system for configurable layouts and field renderers
- Implement ConfigurableLayout component with dynamic layout rendering
- Create layout renderers: Grid, Tabs, Flex, Accordion, Sidebar
- Add field renderer system with extensible architecture
- Implement basic field renderers: Text, Number, Boolean, Email
- Create wrapped UI components for Tabs and Accordion
- Integrate layout configuration with Accommodations entity
- Add permission system foundation for granular field control
- Support responsive breakpoints and accessibility features

Components added:
- entity-detail/types.ts - Core type definitions
- entity-detail/layouts/ - Layout system components
- entity-detail/field-renderers/ - Field rendering system
- ui-wrapped/Tabs.tsx, Accordion.tsx - UI component wrappers

This establishes the foundation for flexible, configurable entity detail pages.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -25,7 +25,9 @@
         "@faker-js/faker": "9.6.0",
         "@github/relative-time-element": "^4.4.8",
         "@pablotheblink/flashyjs": "^1.0.5",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@repo/auth-ui": "workspace:*",
         "@repo/config": "workspace:*",
         "@repo/i18n": "workspace:*",
