--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -27,7 +27,9 @@
         "@pablotheblink/flashyjs": "^1.0.5",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-switch": "^1.2.6",
@@ -53,6 +55,7 @@
         "@vitejs/plugin-react": "4.7.0",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
+        "cmdk": "^1.1.1",
         "lucide-react": "^0.540.0",
         "react": "19.1.1",
         "react-dom": "19.1.1",
