--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -15,6 +15,9 @@
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts",
         "dev": "echo 'Dev mode uses tsconfig paths (no build)'",
+        "test": "vitest",
+        "test:run": "vitest run",
+        "test:coverage": "vitest run --coverage",
         "typecheck": "tsc --noEmit",
         "lint": "biome check .",
         "format": "biome format --write .",
@@ -28,8 +31,10 @@
         "zod": "^4.0.8"
     },
     "devDependencies": {
+        "@faker-js/faker": "^9.3.0",
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
+        "@vitest/coverage-v8": "^3.1.3",
         "tsup": "^8.4.0",
         "typescript": "^5.8.3",
         "vitest": "^3.1.3"
