docs(schemas): update README and tsconfig for destination schemas
- Update README.md to document new destination schema types
- Add destination schema exports to documentation
- Update tsconfig.json configuration as needed

--- a/packages/schemas/tsconfig.json
+++ b/packages/schemas/tsconfig.json
@@ -1,5 +1,5 @@
 {
     "extends": "../typescript-config/package-base.json",
     "include": ["src/**/*", "test/**/*"],
-    "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
+    "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
