build(service-core): update tsconfig for destination refactor
- Update tsconfig.json configuration as needed for destination service changes
- Ensure proper TypeScript configuration for centralized schemas

--- a/packages/service-core/tsconfig.json
+++ b/packages/service-core/tsconfig.json
@@ -8,6 +8,13 @@
         "allowImportingTsExtensions": true,
         "noEmit": true
     },
-    "include": ["src/**/*", "test/**/*"],
-    "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
+    "include": [
+        "src/**/*",
+        "test/services/accommodation/**/*",
+        "test/services/accommodationReview/**/*",
+        "test/services/amenity/**/*",
+        "test/services/attraction/**/*",
+        "test/services/destination/**/*"
+    ],
+    "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
