refactor(service-core): refactor event service to use centralized schemas
- Update event service to use schemas from @repo/schemas package
- Improve event normalizers and permissions structure
- Remove local schema definitions in favor of centralized ones
- Update TypeScript configuration for better type resolution
- Enhance service architecture and maintainability

--- a/packages/service-core/tsconfig.json
+++ b/packages/service-core/tsconfig.json
@@ -8,13 +8,6 @@
         "allowImportingTsExtensions": true,
         "noEmit": true
     },
-    "include": [
-        "src/**/*",
-        "test/services/accommodation/**/*",
-        "test/services/accommodationReview/**/*",
-        "test/services/amenity/**/*",
-        "test/services/attraction/**/*",
-        "test/services/destination/**/*"
-    ],
+    "include": ["src/**/*", "test/**/*"],
     "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
