fix(seed): extend amenity descriptions to meet minimum length requirement
- Update 18 amenity files with expanded descriptions (10+ characters)
- Ensure all amenity descriptions pass schema validation
- Maintain descriptive quality while meeting validation rules

--- a/packages/seed/src/data/amenity/066-amenity-general-appliances-spa.json
+++ b/packages/seed/src/data/amenity/066-amenity-general-appliances-spa.json
@@ -3,7 +3,7 @@
     "id": "066-amenity-general-appliances-spa",
     "name": "spa",
     "slug": "spa",
-    "description": "Spa",
+    "description": "Spa y relajación",
     "type": "GENERAL_APPLIANCES",
     "icon": "amenity",
     "isBuiltin": false,
