--- a/packages/seed/src/data/amenity/067-amenity-general-appliances-gym.json
+++ b/packages/seed/src/data/amenity/067-amenity-general-appliances-gym.json
@@ -3,7 +3,7 @@
     "id": "067-amenity-general-appliances-gym",
     "name": "gym",
     "slug": "gym",
-    "description": "Gimnasio",
+    "description": "Gimnasio completo",
     "type": "GENERAL_APPLIANCES",
     "icon": "amenity",
     "isBuiltin": false,
