--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -39,7 +39,7 @@
         "@repo/i18n": "workspace:*",
         "@repo/icons": "workspace:*",
         "@repo/logger": "workspace:*",
-        "@repo/types": "workspace:*",
+        "@repo/schemas": "workspace:*",
         "@tailwindcss/vite": "4.1.12",
         "@tanstack/match-sorter-utils": "8.19.4",
         "@tanstack/react-devtools": "0.2.2",
