feat: migrate shared packages to @repo/schemas
- Update auth-ui package dependencies
- Migrate accommodation service in service-core
- Update tools-todo-linear configuration
- Remove @repo/types references from shared packages

--- a/packages/tools-todo-linear/package.json
+++ b/packages/tools-todo-linear/package.json
@@ -37,8 +37,7 @@
         "chalk": "^5.4.1",
         "dotenv": "^16.5.0",
         "@repo/config": "workspace:*",
-        "@repo/logger": "workspace:*",
-        "@repo/types": "workspace:*"
+        "@repo/logger": "workspace:*"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
