build(payments): Update package.json configuration
- Update build scripts and dependencies for payments package
- Ensure proper TypeScript and module configuration
- Align with monorepo standards

--- a/packages/payments/package.json
+++ b/packages/payments/package.json
@@ -20,7 +20,7 @@
         "format": "biome format --write .",
         "check": "biome check --write .",
         "clean": "rm -rf node_modules dist",
-        "test": "vitest"
+        "test": "vitest run --passWithNoTests"
     },
     "dependencies": {
         "@repo/config": "workspace:*",
