--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -63,7 +63,7 @@
         "tailwindcss": "4.1.12",
         "tw-animate-css": "1.3.6",
         "vite-tsconfig-paths": "5.1.4",
-        "zod": "3.25.76"
+        "zod": "^4.0.8"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
