chore(vscode): add Source Code Pro font configuration
- Add Source Code Pro as primary font family for editor and terminal
- Set font ligatures and optimal sizes (11px editor, 11px terminal)
- Configure line heights for better readability (1.5 editor, 1.2 terminal)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -175,6 +175,13 @@
     "workbench.editor.editorActionsLocation": "titleBar",
     "terminal.integrated.env.windows": {},
     "biome.rename": true,
+    "editor.fontFamily": "'Source Code Pro'",
+    "terminal.integrated.fontFamily": "'Source Code Pro'",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 11,
+    "editor.lineHeight": 1.5,
+    "terminal.integrated.fontSize": 11,
+    "terminal.integrated.lineHeight": 1.2,
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
     "editor.formatOnSaveMode": "file",
