chore(git): update gitignore patterns
- Add comprehensive ignore patterns for OS/editor files
- Include build artifacts and framework-specific directories
- Add coverage, logs, and cache directories to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,6 @@ yarn-error.log*
 # IDE / Editor configs
 # =========================
 .idea
-.vscode
 *.tsbuildinfo
 
 # =========================
@@ -82,6 +81,7 @@ NOTES.txt
 mcp-todos.json
 packages/seed/mappings/id-mappings.json
 apps/api/package.prod.json
+docs/dev
 
 # TanStack Router generated files
 **/routeTree.gen.ts
