feat(planning): create validation and sync scripts
Implemented comprehensive validation and synchronization system:

Subtask PF004-4.1: validate-docs.sh
- Validates agent/command/skill counts match READMEs
- Checks for broken internal links
- Verifies directory structure integrity
- Color-coded output with detailed error reporting

Subtask PF004-4.2: sync-registry.sh
- Regenerates .code-registry.json from all TODOs.md files
- Ensures registry stays in sync with source of truth
- Simple wrapper around generate-code-registry.cjs

Subtask PF004-4.3: validate-schemas.ts
- Validates JSON files against JSON schemas
- Validates markdown frontmatter (when present)
- Uses ajv with schema caching for performance
- Supports date-time, uri, and other formats
- Detailed error reporting with path information

Subtask PF004-4.4: package.json scripts
- claude:validate:docs - Run documentation validation
- claude:validate:schemas - Run schema validation
- claude:sync:registry - Sync code registry
- claude:validate - Run all validations

Additional:
- Added ajv and ajv-formats dependencies
- Created code-registry.schema.json for registry validation
- All scripts exit with proper status codes (0/1)
- Performance optimized with schema caching

Task: PF004-4
Closes: #768

Scripts:
- .claude/scripts/validate-docs.sh (206 lines)
- .claude/scripts/sync-registry.sh (27 lines)
- .claude/scripts/validate-schemas.ts (289 lines)

References: #764

--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
         "todo:clean": "pnpm --filter @repo/tools-todo-linear todo:clean",
         "todo:old:sync": "pnpm --filter @repo/tools-todo-linear-old todo:sync",
         "planning:sync": "tsx scripts/planning-sync.ts",
-        "planning:complete": "tsx scripts/planning-complete-task.ts"
+        "planning:complete": "tsx scripts/planning-complete-task.ts",
+        "claude:validate:docs": ".claude/scripts/validate-docs.sh",
+        "claude:validate:schemas": "tsx .claude/scripts/validate-schemas.ts",
+        "claude:sync:registry": ".claude/scripts/sync-registry.sh",
+        "claude:validate": "pnpm claude:validate:docs && pnpm claude:validate:schemas"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
