feat(monitoring): create comprehensive health check system
PF004-26 implementation:

Health check system created:
- ✅ .claude/scripts/health-check.sh: 7 comprehensive checks
- ✅ pnpm script: health-check command added
- ✅ Exit codes: 0 (healthy), 1 (warnings), 2 (errors)

Checks implemented:
1. File counts (agents, commands, skills, learnings, workflows, diagrams)
2. Code registry validation and staleness detection
3. Git hooks configuration verification
4. Core documentation files existence
5. Recent learnings count (max 10)
6. Validation scripts availability
7. Active planning sessions tracking

Features:
- Color-coded output (errors/warnings/success)
- Detailed summary report
- Staleness warnings (registry > 7 days)
- Planning session progress tracking
- Fast execution (< 2 seconds)

Test results: ✅ All 7 checks passed, system healthy

Task PF004-26 complete (26/37 tasks, 70.3% progress)

Closes #790

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
         "claude:validate:schemas": "tsx .claude/scripts/validate-schemas.ts",
         "claude:sync:registry": ".claude/scripts/sync-registry.sh",
         "claude:validate": "pnpm claude:validate:docs && pnpm claude:validate:schemas",
-        "telemetry:report": "tsx .claude/scripts/telemetry-report.ts"
+        "telemetry:report": "tsx .claude/scripts/telemetry-report.ts",
+        "health-check": ".claude/scripts/health-check.sh"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
