--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
         "@commitlint/cli": "^19.8.1",
         "@commitlint/config-conventional": "^19.8.1",
         "@types/node": "^22.15.3",
+        "ajv": "^8.17.1",
+        "ajv-formats": "^3.0.1",
         "husky": "^9.1.7",
         "markdownlint-cli2": "^0.18.1",
         "tsx": "^4.19.4",
