feat(github-workflow): implement Husky post-commit hook for task completion detection
- Add post-commit hook TypeScript implementation
- Implement runPostCommitHook() function
- Create findPlanningSessions() helper
- Detect completed tasks from commit messages
- Auto-update TODOs.md and close GitHub issues
- Add post-commit-hook.ts executable script
- Add hook:post-commit npm script
- Create .husky/post-commit shell script
- Add comprehensive tests (11 tests, all passing)
- Hook runs silently to avoid blocking commits

Implements T-003-013

--- a/packages/github-workflow/package.json
+++ b/packages/github-workflow/package.json
@@ -24,7 +24,8 @@
         "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
         "test:file": "vitest run --passWithNoTests",
-        "test:coverage": "vitest run --coverage"
+        "test:coverage": "vitest run --coverage",
+        "hook:post-commit": "tsx src/scripts/post-commit-hook.ts"
     },
     "dependencies": {
         "@octokit/graphql": "^9.0.3",
