refactor(workflow): rename .todoLinear to .github-workflow
- Rename tracking folder for clarity
- Update all code references to new path
- Configure .gitignore to track tracking.json for multi-PC sync
- Update documentation and tests

BREAKING CHANGE: tracking path changed, update local configs

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,10 @@ yarn-error.log*
 NOTES.txt
 .todo-linear-tracking.json
 mcp-todos.json
+
+# GitHub Workflow package - ignorar todo excepto tracking.json
+.github-workflow/*
+!.github-workflow/tracking.json
 packages/seed/mappings/id-mappings.json
 apps/api/package.prod.json
 docs/dev
